20-final-devops-project/final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-devops
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
