20-final-devops-project/final-devops-project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-app
  namespace: final-devops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["final-devops.local"]
      secretName: final-devops-tls
  rules:
    - host: final-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: final-app
                port: {number: 80}
