20-final-devops-project/final-devops-project/kubernetes/security.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: final-devops
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-release-tracker
  namespace: final-devops
spec:
  podSelector:
    matchExpressions:
      - {key: app, operator: In, values: [release-tracker-frontend, release-tracker-backend, release-tracker-database]}
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector: {}
      ports:
        - {protocol: TCP, port: 8080}
        - {protocol: TCP, port: 8000}
        - {protocol: TCP, port: 5432}
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 8000}
        - {protocol: TCP, port: 5432}
